--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^8.38.0",
     "sass": "^1.61.0",
     "vite": "^4.2.0"
   }
